<resources>
    <string name="app_name">MobileSecureStorage</string>
    <string name="select_file_folder">Select a File or Folder</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="file_name">Specify file name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="load_existing">Load Existing SFS</string>
    <string name="create_new">Create new SFS</string>
    <string name="loc_for_new_sfs">Please select folder for new File</string>
    <string name="select_file">Please select Secure File System file</string>
    <string name="actions">Main Menu</string>
    <string name="importing">Importing files...</string>
    <string name="please_provide_password">Please specify password to reload the File</string>
    <string name="specify_file_name">Specify Filename</string>
    <string name="rename">Rename</string>
    <string name="rename_label">Filename</string>
    <string name="ext_storage_rationale">Android File Vault needs access to your file system to allow you to create and load secure file systems anywhere on your device</string>
    <string name="ext_storage_rationale_title">Access to External Storage</string>
</resources>
