<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="150dp"
    android:background="@drawable/kds_attention_background">

    <TextView
        android:id="@+id/renameLabel"
        style="@style/kds_text"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:text="@string/rename_label"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/renameInput"
        style="@style/kds_textInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:hint="@string/specify_file_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/renameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/renameLabel"
        tools:text="Myfile.dat" />

    <Button
        android:id="@+id/renameButton"
        style="@style/kds_default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/rename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/renameLabel" />

    <TextView
        android:id="@+id/errorMessage"
        style="@style/kds_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/renameInput"
        app:layout_constraintVertical_bias="0.0"
        tools:text="An Error Has Occurred"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>